Update the quote upload page

--- a/src/Web/Bookworm.Web/Areas/Account/Views/Manage/Index.cshtml
+++ b/src/Web/Bookworm.Web/Areas/Account/Views/Manage/Index.cshtml
@@ -2,4 +2,4 @@
     this.Layout = "_AccountLayout";
 }
 
-<h1 class="text-center">Manage your account</h1>
+<h1 class="text-center text-white">Account Area</h1>
