--- a/src/Web/Bookworm.Web/Views/Shared/PartialViews/_BookListingPartial.cshtml
+++ b/src/Web/Bookworm.Web/Views/Shared/PartialViews/_BookListingPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<section class="booksListingSection my-3 rounded-4 p-4">
+﻿<section class="booksListingSection my-3 mx-5 rounded-4 p-4">
 
     <div class="d-flex flex-wrap justify-content-center gap-4">
         @foreach (var book in Model)
@@ -10,7 +10,7 @@
                 <img title="@book.Title"
                      src="@book.ImageUrl"
                      alt="@book.Title"
-                     height="350"
+                     height="300"
                      class="imageZoom w-100">
 
             </a>
