--- a/src/Web/Bookworm.Web/Areas/Account/Views/Manage/ChangePassword.cshtml
+++ b/src/Web/Bookworm.Web/Areas/Account/Views/Manage/ChangePassword.cshtml
@@ -4,13 +4,13 @@
     this.Layout = "_AccountLayout";
 }
 
-<section class="accountLayoutSection">
-    <form method="post">
+<section class="accountLayoutSection d-flex justify-content-center align-items-center py-2">
+    <form class="w-50 p-5 rounded-4" method="post">
         <h3 class="text-center text-white mb-3">Change your password</h3>
         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
         <div class="form-floating mb-3">
             <input asp-for="@Model.OldPassword"
-                   class="form-control"
+                   class="form-control fs-4"
                    aria-required="true"
                    placeholder="Please enter your old password." />
             <label asp-for="@Model.OldPassword" class="form-label"></label>
@@ -18,7 +18,7 @@
         </div>
         <div class="form-floating mb-3">
             <input asp-for="@Model.NewPassword"
-                   class="form-control"
+                   class="form-control fs-4"
                    aria-required="true"
                    placeholder="Please enter your new password." />
             <label asp-for="@Model.NewPassword" class="form-label"></label>
@@ -26,12 +26,14 @@
         </div>
         <div class="form-floating mb-3">
             <input asp-for="@Model.ConfirmPassword"
-                   class="form-control"
+                   class="form-control fs-4"
                    aria-required="true"
                    placeholder="Please confirm your new password." />
             <label asp-for="@Model.ConfirmPassword" class="form-label"></label>
             <span asp-validation-for="@Model.ConfirmPassword" class="text-danger"></span>
         </div>
-        <button type="submit" class="w-100 btn btn-lg">Update password</button>
+        <div class="text-center">
+            <button type="submit" class="btn btn-lg fs-4 px-5">Update</button>
+        </div>
     </form>
 </section>
