--- a/src/Web/Bookworm.Web/Areas/Account/Views/Manage/ChangeUsername.cshtml
+++ b/src/Web/Bookworm.Web/Areas/Account/Views/Manage/ChangeUsername.cshtml
@@ -4,18 +4,20 @@
     this.Layout = "_AccountLayout";
 }
 
-<section class="accountLayoutSection">
-    <form method="post">
+<section class="accountLayoutSection d-flex justify-content-center align-items-center py-2">
+    <form class="w-50 p-5 rounded-4" method="post">
         <h3 class="text-center text-white mb-3">Change your username</h3>
         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
         <div class="form-floating mb-3">
             <input asp-for="@Model.UserName"
-                   class="form-control"
+                   class="form-control fs-4"
                    aria-required="true"
                    placeholder="Please enter your new username." />
             <label asp-for="@Model.UserName" class="form-label"></label>
             <span asp-validation-for="@Model.UserName" class="text-danger"></span>
         </div>
-        <button type="submit" class="w-100 btn btn-lg">Update password</button>
+        <div class="text-center">
+            <button type="submit" class="btn btn-lg fs-4 px-5">Update</button>
+        </div>
     </form>
 </section>
