--- a/src/Web/Bookworm.Web/Views/Category/All.cshtml
+++ b/src/Web/Bookworm.Web/Views/Category/All.cshtml
@@ -12,7 +12,7 @@
 
 <partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
 
-<section class="categoriesSection py-5 px-1 my-3 rounded-4">
+<section class="categoriesSection px-1 my-3 mx-5 rounded-4">
 
     <div class="d-flex flex-wrap gap-4 justify-content-center">
         @foreach (var category in Model)
