--- a/src/Web/Bookworm.Web/Views/Quote/Edit.cshtml
+++ b/src/Web/Bookworm.Web/Views/Quote/Edit.cshtml
@@ -2,64 +2,67 @@
 
 @{
     this.ViewData["Title"] = "Edit Quote";
-    var titleCardModel = new TitleCardPartialViewModel { Title = "Edit Quote", IconClass = "fas fa-pen icon ms-3" };
-}
 
-@section Styles {
-    <link rel="stylesheet" href="~/css/quote/quoteEdit.css"/>
+    var titleCardModel = new TitleCardPartialViewModel
+            {
+                Title = "Edit Quote",
+                IconClass = "fas fa-pen icon ms-3"
+            };
 }
 
 <partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
 
-<div class="editQuoteContainer">
-    <form asp-controller="Quote" asp-action="Edit" class="editQuoteForm">
+<section class="editQuoteSection d-flex justify-content-center py-4">
+
+    <form asp-controller="Quote" asp-action="Edit" class="w-50 fs-5 p-3 rounded-4">
         <div asp-validation-summary="All" class="text-danger"></div>
         <input type="hidden" asp-for="@Model.Id" value="@Model.Id" />
         @if (Model.Type == QuoteType.GeneralQuote)
         {
             <input type="hidden" asp-for="@Model.Type" value="@QuoteType.GeneralQuote" />
             <div class="form-group justify-content-center">
-                <label asp-for="@Model.Content"><strong>Content</strong></label>
-                <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
+                <label class="text-white" asp-for="@Model.Content">Content</label>
+                <textarea asp-for="@Model.Content" class="form-control fs-4" rows="3"></textarea>
             </div>
             <div class="form-group my-3">
-                <label asp-for="@Model.AuthorName"><strong>Author's Name</strong></label>
-                <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control">
+                <label class="text-white" asp-for="@Model.AuthorName">Author's Name</label>
+                <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control fs-4">
             </div>
         }
         else if (Model.Type == QuoteType.BookQuote)
         {
             <input type="hidden" asp-for="@Model.Type" value="@QuoteType.BookQuote" />
             <div class="form-group justify-content-center">
-                <label asp-for="@Model.Content"><strong>Content</strong></label>
-                <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
+                <label class="text-white" asp-for="@Model.Content">Content</label>
+                <textarea asp-for="@Model.Content" class="form-control fs-4" rows="3"></textarea>
             </div>
             <div class="form-group my-3">
-                <label asp-for="@Model.BookTitle"><strong>Book Title</strong></label>
-                <input asp-for="@Model.BookTitle" value="@Model.BookTitle" type="text" class="form-control">
+                <label class="text-white" asp-for="@Model.BookTitle">Book Title</label>
+                <input asp-for="@Model.BookTitle" value="@Model.BookTitle" type="text" class="form-control fs-4">
             </div>
             <div class="form-group">
-                <label asp-for="@Model.AuthorName"><strong>Author's Name</strong></label>
-                <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control">
+                <label class="text-white" asp-for="@Model.AuthorName">Author's Name</label>
+                <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control fs-4">
             </div>
         }
         else if (Model.Type == QuoteType.MovieQuote)
         {
             <input type="hidden" asp-for="@Model.Type" value="@QuoteType.MovieQuote" />
             <div class="form-group justify-content-center">
-                <label asp-for="@Model.Content"><strong>Content</strong></label>
-                <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
+                <label class="text-white" asp-for="@Model.Content">Content</label>
+                <textarea asp-for="@Model.Content" class="form-control fs-4" rows="3"></textarea>
             </div>
             <div class="form-group my-3">
-                <label asp-for="@Model.MovieTitle"><strong>Movie Title</strong></label>
-                <input asp-for="@Model.MovieTitle" value="@Model.MovieTitle" type="text" class="form-control">
+                <label class="text-white" asp-for="@Model.MovieTitle">Movie Title</label>
+                <input asp-for="@Model.MovieTitle" value="@Model.MovieTitle" type="text" class="form-control fs-4">
             </div>
         }
-        <div class="editQuoteFormBtnContainer mt-3">
-            <button type="submit" class="btn">
-                Edit<i class="fa fa-square-pen ms-2"></i>
+        <div class="text-center mt-3">
+            <button type="submit" class="btn fs-4 px-5">
+                Edit<i class="fa fa-square-pen ms-2 fs-4"></i>
             </button>
         </div>
     </form>
-</div>
+
+</section>
 
