--- a/src/Web/Bookworm.Web/Views/Quote/Upload.cshtml
+++ b/src/Web/Bookworm.Web/Views/Quote/Upload.cshtml
@@ -2,125 +2,88 @@
 
 @{
     ViewData["Title"] = "Upload Quote";
-    var titleCardModel = new TitleCardPartialViewModel { Title = "Upload Quote", IconClass = "fa-pen" };
+
+    var titleCardModel = new TitleCardPartialViewModel
+            {
+                Title = "Upload Quote",
+                IconClass = "fa-pen"
+            };
 }
 
-@section Styles {
-    <link rel="stylesheet" href="~/css/quote/quoteUpload.css" asp-append-version="true" />
-}
+<section class="uploadQuoteSection mx-5">
 
-<section class="uploadQuoteSection">
     <partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
-    <div class="uploadQuoteBtnsContainer">
-        <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#movieModal">
-            Movie Quote<i class="fa-solid fa-film ms-3 fa-xl"></i>
-        </button>
 
-        <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#bookModal">
-            Book Quote<i class="fa-solid fa-book ms-3 fa-xl"></i>
-        </button>
+    <div style="border: solid 2px var(--clr-secondary);background-color: var(--clr-primary);" class="quoteContainer d-flex flex-wrap justify-content-evenly align-items-center my-4 rounded-4 p-5">
 
-        <button type="button" class="btn button btn-lg" data-bs-toggle="modal" data-bs-target="#otherModal">
-            General Quote<i class="fa-solid fa-user-pen ms-3 fa-xl"></i>
-        </button>
-    </div>
-
-    @* Movie Quote Modal *@
-    <div class="modal fade" id="movieModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-4" id="exampleModalLabel">Upload Movie Quote</h1>
-                    <i class="fa-regular fa-circle-xmark btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
-                </div>
-                <div class="modal-body uploadQuoteModalContainer">
-                    <img class="col-4" src="~/images/quote/movieQuote.jpg" />
-                    <form id="movieQuoteForm" method="post" asp-controller="Quote" asp-action="Upload">
-                        <input type="hidden" asp-for="@Model.Type" value="@QuoteType.MovieQuote" />
-                        <div class="form-group justify-content-center">
-                            <label asp-for="@Model.Content"><strong>Content</strong></label>
-                            <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
-                        </div>
-                        <div class="form-group my-3">
-                            <label asp-for="@Model.MovieTitle"><strong>Movie Title</strong></label>
-                            <input asp-for="@Model.MovieTitle" value="@Model.MovieTitle" type="text" class="form-control">
-                        </div>
-                        <div class="text-center mt-4 mb-5">
-                            <button type="submit" class="btn button form-button">
-                                <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
-                            </button>
-                        </div>
-                    </form>
-                </div>
+        <img style="border: solid 2px var(--clr-secondary);" class="w-25 rounded-4" height="400" src="~/images/quote/generalQuote.jpg" />
+        <form id="generalQuoteForm" style="border: none;" class="w-50 fs-4" method="post" asp-controller="Quote" asp-action="Upload">
+            <input type="hidden" asp-for="@Model.Type" value="@QuoteType.GeneralQuote" />
+            <div class="form-group justify-content-center w-100">
+                <label class="text-white" asp-for="@Model.Content">Content</label>
+                <textarea asp-for="@Model.Content" class="form-control fs-4" rows="6"></textarea>
             </div>
-        </div>
+            <div class="form-group my-3">
+                <label class="text-white" asp-for="@Model.AuthorName">Author's Name</label>
+                <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control fs-4">
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn button fs-4 px-5">
+                    Upload General Quote<i class="ms-2 fas fa-upload icon"></i>
+                </button>
+            </div>
+        </form>
+
     </div>
 
-    @* Book Quote Modal *@
-    <div class="modal fade" id="bookModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-4" id="exampleModalLabel">Upload Book Quote</h1>
-                    <i class="fa-regular fa-circle-xmark btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
-                </div>
-                <div class="modal-body uploadQuoteModalContainer">
-                    <img class="img-fluid" src="~/images/quote/bookQuote.jpg" />
-                    <form id="bookQuoteForm" method="post" asp-controller="Quote" asp-action="Upload">
-                        <input type="hidden" asp-for="@Model.Type" value="@QuoteType.BookQuote" />
-                        <div class="form-group justify-content-center">
-                            <label asp-for="@Model.Content"><strong>Content</strong></label>
-                            <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
-                        </div>
-                        <div class="form-group my-3">
-                            <label asp-for="@Model.BookTitle"><strong>Book Title</strong></label>
-                            <input asp-for="@Model.BookTitle" value="@Model.BookTitle" type="text" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="@Model.AuthorName"><strong>Author's Name</strong></label>
-                            <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control">
-                        </div>
-                        <div class="text-center mt-4 mb-5">
-                            <button type="submit" class="btn button form-button">
-                                <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
-                            </button>
-                        </div>
-                    </form>
-                </div>
+    <div style="border: solid 2px var(--clr-secondary);background-color: var(--clr-primary);" class="quoteContainer d-flex flex-wrap justify-content-evenly align-items-center my-4 rounded-4 p-5">
+
+        <img style="border: solid 2px var(--clr-secondary);" class="w-25 rounded-4" height="400" src="~/images/quote/movieQuote.jpg" />
+        <form class="w-50 fs-4" style="border: none;" id="movieQuoteForm" method="post" asp-controller="Quote" asp-action="Upload">
+            <input type="hidden" asp-for="@Model.Type" value="@QuoteType.MovieQuote" />
+            <div class="form-group justify-content-center w-100">
+                <label class="text-white" asp-for="@Model.Content">Content</label>
+                <textarea asp-for="@Model.Content" class="form-control fs-4" rows="6"></textarea>
             </div>
-        </div>
+            <div class="form-group my-3">
+                <label class="fs-4 text-white" asp-for="@Model.MovieTitle">Movie Title</label>
+                <input asp-for="@Model.MovieTitle" value="@Model.MovieTitle" type="text" class="form-control fs-4">
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn button fs-4 px-5">
+                    Upload Movie Quote<i class="ms-2 fas fa-upload icon"></i>
+                </button>
+            </div>
+        </form>
+
     </div>
 
-    @* General Quote Modal *@
-    <div class="modal fade" id="otherModal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-xl modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-4" id="exampleModalLabel">Upload General Quote</h1>
-                    <i class="fa-regular fa-circle-xmark btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
-                </div>
-                <div class="modal-body uploadQuoteModalContainer">
-                    <img class="col-4" src="~/images/quote/generalQuote.jpg" />
-                    <form id="generalQuoteForm" method="post" asp-controller="Quote" asp-action="Upload">
-                        <input type="hidden" asp-for="@Model.Type" value="@QuoteType.GeneralQuote" />
-                        <div class="form-group justify-content-center">
-                            <label asp-for="@Model.Content"><strong>Content</strong></label>
-                            <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
-                        </div>
-                        <div class="form-group my-3">
-                            <label asp-for="@Model.AuthorName"><strong>Author's Name</strong></label>
-                            <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control">
-                        </div>
-                        <div class="text-center mt-4 mb-5">
-                            <button type="submit" class="btn button form-button">
-                                <strong>Upload<i class="ms-2 fas fa-upload icon"></i></strong>
-                            </button>
-                        </div>
-                    </form>
-                </div>
+    <div style="border: solid 2px var(--clr-secondary);background-color: var(--clr-primary);" class="quoteContainer d-flex flex-wrap justify-content-evenly align-items-center my-4 rounded-4 p-5">
+
+        <img style="border: solid 2px var(--clr-secondary);" class="w-25 rounded-4" height="500" src="~/images/quote/bookQuote.jpg" />
+        <form class="w-50 fs-4" style="border: none;" id="bookQuoteForm" method="post" asp-controller="Quote" asp-action="Upload">
+            <input type="hidden" asp-for="@Model.Type" value="@QuoteType.BookQuote" />
+            <div class="form-group justify-content-center w-100">
+                <label class="text-white" asp-for="@Model.Content">Content</label>
+                <textarea asp-for="@Model.Content" class="form-control fs-4" rows="6"></textarea>
             </div>
-        </div>
+            <div class="form-group my-3">
+                <label class="fs-4 text-white" asp-for="@Model.BookTitle">Book Title</label>
+                <input asp-for="@Model.BookTitle" value="@Model.BookTitle" type="text" class="form-control fs-4">
+            </div>
+            <div class="form-group my-3">
+                <label class="fs-4 text-white" asp-for="@Model.AuthorName">Author Name</label>
+                <input asp-for="@Model.AuthorName" value="@Model.AuthorName" type="text" class="form-control fs-4">
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn button fs-4 px-5">
+                    Upload Book Quote<i class="ms-2 fas fa-upload icon"></i>
+                </button>
+            </div>
+        </form>
+
     </div>
+
 </section>
 
 @section Scripts {
