--- a/src/Web/Bookworm.Web/Views/Shared/PartialViews/Quotes/_QuotesTablePartial.cshtml
+++ b/src/Web/Bookworm.Web/Views/Shared/PartialViews/Quotes/_QuotesTablePartial.cshtml
@@ -57,8 +57,8 @@ else
             }
         </h3>
     }
-    <section class="tableSection">
-        <table class="table table-hover table-dark table-bordered fs-5" id="dataTable">
+    <section class="tableSection mx-5">
+        <table class="table table-bordered fs-5" id="dataTable">
             <thead>
                 <tr>
                     <th class="text-center align-middle" scope="col">#</th>
