--- a/src/Web/Bookworm.Web/Views/Shared/PartialViews/_BooksSearchInputPartial.cshtml
+++ b/src/Web/Bookworm.Web/Views/Shared/PartialViews/_BooksSearchInputPartial.cshtml
@@ -1,10 +1,10 @@
 ﻿<div class="input-group mt-4 searchInputGroup">
     <input type="text"
-           class="form-control bookSearchInput"
+           class="form-control bookSearchInput ms-5 fs-4 rounded-start-4"
            placeholder="Search by book title, author or publisher..."
            aria-label="Recipient's username"
            aria-describedby="button-addon2">
-    <button type="button" id="bookSearchButton">
-        <i class="fa fa-magnifying-glass fa-xl"></i>
+    <button type="button" class="me-5 rounded-end-4" id="bookSearchButton">
+        <i class="fa fa-magnifying-glass fa-2xl"></i>
     </button>
 </div>
