--- a/src/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
+++ b/src/Web/Bookworm.Web/Views/Shared/PartialViews/_LoginPartial.cshtml
@@ -63,11 +63,11 @@
             </li>
         </ul>
     </li>
-    <form method="post" class="form-inline d-flex"
+    <form style="border: none;" method="post" class="form-inline d-flex"
           asp-area=@GlobalConstants.AccountAreaName
           asp-controller="Authentication"
           asp-action="Logout">
-        <button type="submit" class="nav-link logout-btn px-3">
+        <button type="submit" class="nav-link rounded-4 px-3 button">
             Logout<i class="fas fa-sign-out-alt ms-2"></i>
         </button>
     </form>
