--- a/src/Web/Bookworm.Web/Views/Shared/_AccountLayout.cshtml
+++ b/src/Web/Bookworm.Web/Views/Shared/_AccountLayout.cshtml
@@ -2,12 +2,8 @@
     Layout = "_Layout.cshtml";
 }
 
-@section Styles {
-    <link rel="stylesheet" href="~/css/identity/accountLayout.css"/>
-}
-
 <nav class="navbar navbar-expand-lg accountLayoutNavbar">
-    <div class="container-fluid">
+    <div class="container-fluid fs-4">
         <a class="navbar-brand"
            asp-area="Account"
            asp-controller="Manage"
